<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.samirvega.calculadora.MainActivity"
    android:orientation="vertical">
    <!-- Display -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="bottom">
        <TextView
            android:id="@+id/idDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:textAlignment="textEnd"
            android:textSize="38sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="horizontal">
        <!-- Botones 7,8,9,/ -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/idNumero7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickSiete"
                    android:text="@string/siete"
                    android:background="@color/mario01"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView

                    android:id="@+id/idNumero4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickCuatro"
                    android:text="@string/cuatro"
                    android:background="@color/mario01"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/idNumero1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickUno"
                    android:text="@string/uno"
                    android:background="@color/mario01"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/idPunto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickPunto"
                    android:text="@string/Punto"
                    android:background="@color/mario01"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
        <!-- Botones 4,5,6,* -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/idNumero8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickOcho"
                    android:text="@string/ocho"
                    android:background="@color/mario01"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/idNumero5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickCinco"
                    android:text="@string/cinco"
                    android:background="@color/mario01"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/idNumero2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickDos"
                    android:text="@string/dos"
                    android:background="@color/mario01"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/idCero"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickCero"
                    android:text="@string/cero"
                    android:background="@color/mario01"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
            </LinearLayout>

        </LinearLayout>
        <!-- Botones 1,2,3,- -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/idNumero9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickNueve"
                    android:text="@string/nueve"
                    android:background="@color/mario01"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/idNumero6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickSeis"
                    android:text="@string/seis"
                    android:background="@color/mario01"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/idNumero3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickTres"
                    android:text="@string/tres"
                    android:background="@color/mario01"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/idIgual"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickIgual"
                    android:text="@string/igual"
                    android:background="@color/mario01"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
        <!-- Botones .,0,=,+ -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/borrar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:onClick="clickBorrar"
                    android:text="@string/borrar"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/idDivision"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickDivision"
                    android:text="@string/Division"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/idPor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickPor"
                    android:text="@string/por"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/idMenos"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickMenos"
                    android:text="@string/menos"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>

            </LinearLayout>
            <!-- Boton para borrar C. -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/idIMas"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:onClick="clickMas"
                    android:text="@string/mas"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>



